sqlxo/tests/orm/derive/try/err/unknown_key.stderr
error: unknown key in #[sqlxo]
 --> tests/orm/derive/try/err/unknown_key.rs:5:9
  |
5 | #[sqlxo(foo = "bar")]
  |         ^^^^^^^^^^^
